added a new paragraph

--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
       <button type="submit">Send Message</button>
     </form>
     <p>please enter your correct information </p>
+
+    <p>please enter your details correctly . </p>
   </section>
 
 
